# HttpServer

./: .gitignore  CMakeLists.txt
html/: index.html  main.js  style.css
include/: http.h  logger.h  utils.h
src/: http.cpp  main.cpp  utils.cpp
